# ChatGPT-plugin-test

./: .gitignore  README.md  pyproject.toml
plugin/: 20230515002335.xml  main.py
plugin/.well-known/: ai-plugin.json  openapi.yaml
plugin/dart/: dart_api.py  dart_disclosure.py  dart_finance.py  dart_util.py
plugin/database/: pinecone_db.py
plugin/openai/: embedding.py
plugin/pinecone/: db.py
tests/: test_io.py
