[tool.poetry]
name = "plugin"
version = "0.1.0"
description = ""
authors = ["sehwan505 <sehwan505@google.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
openai = "^0.27.8"
uvicorn = "^0.22.0"
pinecone-client = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
